syntax = "proto3";

package token;

option go_package = "github.com/TikhampornSky/go-auth-verifiedMail/gen";

message Payload {
    int64 userId = 1;
    string role = 2;
}